# viplanner

./: .gitignore  ARCHITECTURE.md  pyproject.toml  run_tests.sh  train.py
docs/: ClaudeCode_DeepSeek_配置指南.md  DATASET_PROCESSING_GUIDE.md  MIGRATION_GUIDE.md  README_DATA_PROCESSING.md  TIVP_PROJECT_STRUCTURE.md  TIVP_QUICKSTART.md  TIVP_USAGE.md  代码规范.md  开发文档.md  推理代码规范.md  推理开发文档.md  现在按照你的方案给我一份直接可以跑到Phase 3的跑推理的开发文档.docx
examples/: train_example.py
scripts/: process_databet.py  process_databet_simple.py  quick_start.sh  test_data_processing.py  test_tivp_inference.py  train_carla.py  train_tivp.py  visualize_processed_data.py
tests/: test_configs.py  test_models.py
viplanner.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
viplanner/configs/: __init__.py  carla_config.py  train_config.py
viplanner/datasets/: __init__.py  carla_dataset.py  planner_dataset.py  preprocessing.py  processed_databet_dataset.py
viplanner/losses/: __init__.py  trajectory_loss.py
viplanner/models/: __init__.py  autoencoder.py  plannernet.py
viplanner/tivp/: README.md  __init__.py  configs.py  dataset.py  history.py  models.py  planner.py  samplers.py  sdf_guidance.py  warm_start.py
viplanner/trainers/: __init__.py  viplanner_trainer.py
viplanner/traj_cost/: __init__.py  cost_map.py  traj_cost.py  traj_opt.py
viplanner/utils/: __init__.py  logging.py  optimizer.py
